cluster/apps/goldilocks/dashboard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goldilocks-dashboard
  namespace: goldilocks
  labels:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/component: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: goldilocks
      app.kubernetes.io/component: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: goldilocks
        app.kubernetes.io/component: dashboard
    spec:
      serviceAccountName: goldilocks-dashboard
      containers:
        - name: goldilocks
          image: "us-docker.pkg.dev/fairwinds-ops/oss/goldilocks:v4.15.1"
          imagePullPolicy: Always
          command:
            - /goldilocks
            - dashboard
            - --exclude-containers=linkerd-proxy,istio-proxy
            - -v3
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10324
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              # cpu: 25m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
      nodeSelector:
        kubernetes.io/arch: amd64
