cluster/apps/goldilocks/dashboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: goldilocks-dashboard
  namespace: goldilocks
  labels:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/component: dashboard
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/component: dashboard
